Further diss work (a lot on pruning)

--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -8,6 +8,8 @@
 \usepackage{pifont}
 \usepackage{listings}
 \usepackage{subcaption}
+\usepackage{algorithm}
+\usepackage{algorithmic}
 
 \usepackage{color}
  
