--- a/dissertation/sections/03-review.tex
+++ b/dissertation/sections/03-review.tex
@@ -30,9 +30,10 @@ A goal of the project was to research techniques currently used to visualise mas
 \section{Example within the Field}
 
 \subsection{Visual Investigator}
-Currently, the SAS product Visual Investigator \cite{sasvi} lets users view a network of entities in the system to see how they connect (for example: names, phone numbers and addresses). This works perfectly for a few entities, with useful information being shown clearly. However, with potentially millions of nodes, the network no longer shows much useful or practical information - just a mass of nodes - and becomes unusably slow (Visual Investigator is a web app and both processing power and memory are hard limits which, depending on network size, will easily be hit). However, it is worth nothing that the ``mass of nodes'' can still show useful information despite initially looking meaningless. The overall shape of the network can highlight bottlenecks of the system, or potential threats or holes in a system.
 
-As can be seen in Figures \ref{fig:30nodes}, \ref{fig:1000nodes}, \ref{fig:2500nodes}, \ref{fig:7500nodes}, the network starts out clear and loading times are instant, but it soon becomes both meaningless and impractically slow. If there was a way to both speed up the loading times of huge networks, and make them convey meaningful information to the user, this would be very beneficial.
+Currently, the SAS product Visual Investigator \cite{sasvi} lets users view a network of entities in the system to see how they connect (for example: names, phone numbers and addresses). This works perfectly for a few entities, with useful information being shown clearly. However, with potentially millions of nodes, the network no longer shows much useful or practical information - just a mass of nodes - and becomes unusably slow (Visual Investigator is a web app and both processing power and memory are hard limits which, depending on network size, will easily be hit). However, it is worth nothing that the 'mass of nodes' can still show useful information despite initially looking meaningless. The overall shape of the network can highlight bottlenecks of the system, or potential threats or holes in a system.
+
+As can be seen in Figures \ref{fig:30nodes}, \ref{fig:1000nodes}, \ref{fig:2500nodes}, \ref{fig:7500nodes}, the network starts out clear and loading times are instant, but it soon becomes both difficult to understand and slow. The times shown in the below figures are from the initial release version of Visual Investigator, and since then performance has improved in many ways. However, if there was a way to both speed up the loading times of huge networks, and make them convey meaningful information to the user, this would be benefit the system greatly.
 
 \begin{figure}
 \centering
